fixed menu spacing

--- a/src/index.css
+++ b/src/index.css
@@ -321,5 +321,6 @@ body.profile {
 
   #profile-div {
     padding-left: 0px;
+    padding-right: 0px;
   }
 }
